--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="./decap-cms.js"></script>
 </head>
 <body>
+  <div id="nc-root"></div>
   <script>
     console.log("阿波波报道，指挥部已经部署在子域名下啦！喵呜~");
   </script>
